# arch-audit

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
completions/zsh/: _arch-audit
contrib/config/: settings.toml
contrib/man/: arch-audit.scd
contrib/systemd/: arch-audit.service  arch-audit.timer
doc/: arch-audit.1  arch-audit.scd
hooks/: arch-audit.hook
src/: args.rs  avg.rs  cli.yml  config.rs  enums.rs  errors.rs  lib.rs  main.rs  types.rs  util.rs
systemd/: arch-audit.timer
