[package]
name = "arch-audit"
version = "0.1.16"
authors = ["Andrea Scarpino <andrea@scarpino.dev>"]
description = "A utility like pkg-audit for Arch Linux based on Arch Security Team data"
repository = "https://gitlab.com/ilpianista/arch-audit"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["archlinux", "security"]
edition = "2018"

[[bin]]
name = "arch-audit"

[dependencies]
alpm = "^1.0"
anyhow = "^1.0"
atty = "^0.2"
curl = "^0.4"
env_logger = "^0.8"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
term = "^0.7"
structopt = "0.3"
strum = "^0.20"
strum_macros = "^0.20"
url = "^2.2"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "^3.2"

[features]
git = ["alpm/git"]

[profile.release]
lto = true
codegen-units = 1
